[docs] 권한 요청 시 출력 메시지 변경

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,15 +32,14 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>카메라 이미지를 사용하려면 접근 권한이 필요합니다.</string>
+	<string>사용자가 촬영한 사진을 프로필 이미지로 설정하거나, 앱에서 사진을 업로드하기 위해 카메라 접근 권한이 필요합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>동영상 음성을 저장하려면 접근 권한이 필요합니다.</string>
+	<string>녹화된 동영상에 소리를 포함하기 위해 마이크 접근 권한이 필요합니다. 이 권한은 동영상 녹음 시에만 사용됩니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>갤러리에 이미지를 저장하려면 접근 권한이 필요합니다.</string>
+	<string>앱에서 생성된 이미지를 갤러리에 저장하기 위해 사진 저장소 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>갤러리에 이미지를 사용하려면 접근 권한이 필요합니다.</string>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
+	<string>갤러리에서 이미지를 선택하여 네컷 사진을 만들기 위해 사진 접근 권한이 필요합니다.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
