--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   screenshot:
   permission_handler:
   social_share:
+  google_fonts:
+  google_mobile_ads:
 
 dev_dependencies:
   flutter_test:
