[feat] 사진 압축 기능 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,9 @@ dependencies:
   screenshot:
   permission_handler:
   social_share:
-  google_fonts:
-  google_mobile_ads:
+  flutter_image_compress:
+  # google_fonts:
+  # google_mobile_ads:
 
 dev_dependencies:
   flutter_test:
