[feat] fireabse_core 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   permission_handler:
   social_share:
   flutter_image_compress:
+  firebase_core:
   # google_fonts:
   # google_mobile_ads:
 
